--- a/werf.yaml
+++ b/werf.yaml
@@ -4,10 +4,10 @@ project: "backend"
 image: builder
 from: golang:1.19-alpine
 docker:
-  WORKDIR: /go/src/gitlab.com/rarimo/questn-integraion-svc
+  WORKDIR: /go/src/gitlab.com/rarimo/questn-integration-svc
 git:
   - add: /
-    to: /go/src/gitlab.com/rarimo/questn-integraion-svc
+    to: /go/src/gitlab.com/rarimo/questn-integration-svc
     stageDependencies:
       install:
         - go.mod
@@ -22,25 +22,25 @@ shell:
     - go env -w GOPRIVATE=gitlab.com/*
     - go env -w GONOSUMDB=gitlab.com/*
     - go env -w GONOPROXY=gitlab.com/*
-    - cd /go/src/gitlab.com/rarimo/questn-integraion-svc
+    - cd /go/src/gitlab.com/rarimo/questn-integration-svc
     - go mod download
     - go mod vendor
   setup:
     - export CGO_ENABLED=1
     - export GO111MODULE=off
     - export GOOS=linux
-    - go build  -o /usr/local/bin/questn-integraion-svc /go/src/gitlab.com/rarimo/questn-integraion-svc
+    - go build  -o /usr/local/bin/questn-integration-svc /go/src/gitlab.com/rarimo/questn-integration-svc
 
 ---
 image: service
 from: alpine:3.14.6
 docker:
-  ENTRYPOINT: questn-integraion-svc
+  ENTRYPOINT: questn-integration-svc
 shell:
   setup:
     - apk add --no-cache ca-certificates
 import:
   - image: builder
-    add: /usr/local/bin/questn-integraion-svc
-    to: /usr/local/bin/questn-integraion-svc
+    add: /usr/local/bin/questn-integration-svc
+    to: /usr/local/bin/questn-integration-svc
     after: setup
