Apply 2 suggestion(s) to 2 file(s)

--- a/config-example.yaml
+++ b/config-example.yaml
@@ -9,7 +9,7 @@ cop:
   disabled: true
   endpoint: "http://..."
   upstream: "http://..."
-  service_name: relayer-svc
+  service_name: questn-integration-svc
   service_port: 80
 
 subgraph:
