--- a/werf.yaml
+++ b/werf.yaml
@@ -1,13 +1,13 @@
 configVersion: 1
-project: "backend"
+project: "questn-integration-svc"
 ---
 image: builder
-from: golang:1.19-alpine
+from: golang:1.20-alpine
 docker:
-  WORKDIR: /go/src/gitlab.com/rarimo/questn-integration-svc
+  WORKDIR: /go/src/github.com/rarimo/questn-integration-svc
 git:
   - add: /
-    to: /go/src/gitlab.com/rarimo/questn-integration-svc
+    to: /go/src/github.com/rarimo/questn-integration-svc
     stageDependencies:
       install:
         - go.mod
@@ -17,23 +17,24 @@ git:
 shell:
   install:
     - apk add git build-base
-    - git config --global url."https://gitlab-ci-token:{{ env "CI_JOB_TOKEN" }}@gitlab.com/".insteadOf https://gitlab.com/
-    - echo "machine gitlab.com login gitlab-ci-token password {{ env "CI_JOB_TOKEN" }}" > ~/.netrc
-    - go env -w GOPRIVATE=gitlab.com/*
-    - go env -w GONOSUMDB=gitlab.com/*
-    - go env -w GONOPROXY=gitlab.com/*
-    - cd /go/src/gitlab.com/rarimo/questn-integration-svc
+    - go env -w GOPRIVATE=github.com/*
+    - go env -w GONOSUMDB=github.com/*
+    - go env -w GONOPROXY=github.com/*
+    - cd /go/src/github.com/rarimo/questn-integration-svc
     - go mod download
     - go mod vendor
   setup:
+    - go env -w GOPRIVATE=github.com/*
+    - go env -w GONOSUMDB=github.com/*
+    - go env -w GONOPROXY=github.com/*
     - export CGO_ENABLED=1
     - export GO111MODULE=off
     - export GOOS=linux
-    - go build  -o /usr/local/bin/questn-integration-svc /go/src/gitlab.com/rarimo/questn-integration-svc
+    - go build  -o /usr/local/bin/questn-integration-svc /go/src/github.com/rarimo/questn-integration-svc
 
 ---
 image: service
-from: alpine:3.14.6
+from: alpine:3.9
 docker:
   ENTRYPOINT: questn-integration-svc
 shell:
